[gd_scene load_steps=4 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]
[ext_resource path="res://ConnectionPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://PlayerList.tscn" type="PackedScene" id=3]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ConnectionPanel" parent="." instance=ExtResource( 2 )]

[node name="PlayerList" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 295.107
margin_top = 71.9289
margin_right = 893.107
margin_bottom = 547.929

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_left = 487.35
margin_top = 129.96
margin_right = 570.35
margin_bottom = 187.96
